--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="main-panel">
       <section class="dialogue-box">
         <div class="portrait">
-          <img src="images/char_jester.png.png" alt="portrait">
+          <img src="images/char_jester.png" alt="portrait">
         </div>
         <div class="dialogue-text">
           <h2>THE FOOL</h2>
@@ -39,15 +39,15 @@
           <p>THE FOOL</p>
         </div>
         <div class="card">
-          <img src="images/char_brokenboy.png.png" alt="Broken Vessel">
+          <img src="images/char_brokenboy.png" alt="Broken Vessel">
           <p>BROKEN VESSEL</p>
         </div>
         <div class="card">
-          <img src="images/char_smiletear.png.png" alt="Laughing Pain">
+          <img src="images/char_smiletear.png" alt="Laughing Pain">
           <p>LAUGHING PAIN</p>
         </div>
         <div class="card">
-          <img src="images/char_brain.png.png" alt="Simulated Consciousness">
+          <img src="images/char_brain.png" alt="Simulated Consciousness">
           <p>SIMULATED CONSCIOUSNESS</p>
         </div>
       </section>
