--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <section class="cards-grid">
         <div class="card">
-          <img src="images/char_jester.png.png" alt="Fool">
+          <img src="images/char_jester.png" alt="Fool">
           <p>THE FOOL</p>
         </div>
         <div class="card">
