--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <div class="interface-grid">
     <aside class="side-panel">
       <div class="panel-header">MENU</div>
-      <button>TALK</button>
-      <button>BAG</button>
-      <button>NOTES</button>
-      <button>VITALS</button>
-      <button>LOOK</button>
-      <button>EXIT</button>
+      <button>CONFESS</button>
+      <button>OBSERVE</button>
+      <button>HYPOTHESIZE</button>
+      <button>INDULGE</button>
+      <button>SCRIBBLE</button>
+      <button>INFECT</button>
     </aside>
 
     <main class="main-panel">
@@ -29,7 +29,8 @@
         </div>
         <div class="dialogue-text">
           <h2>THE FOOL</h2>
-          <p>You’ve opened it again... <strong>Why?</strong></p>
+          <p>You’ve opened it again... <strong>Why?</strong><br>
+          This is your confession. Your inner garbage. Shameful, but without it — hollow.</p>
         </div>
       </section>
 
@@ -37,18 +38,32 @@
         <div class="card">
           <img src="images/char_jester.png" alt="Fool">
           <p>THE FOOL</p>
+          <p>This is your confession. Your inner garbage. Shameful, but without it — hollow.</p>
         </div>
         <div class="card">
           <img src="images/char_brokenboy.png" alt="Broken Vessel">
           <p>BROKEN VESSEL</p>
+          <p>Fragments of thought you always return to, like old infections. Trying to understand the world — breaking yourself instead.</p>
         </div>
         <div class="card">
           <img src="images/char_smiletear.png" alt="Laughing Pain">
           <p>LAUGHING PAIN</p>
+          <p>Why are you laughing? Oh right — hobbies. Broken joys you grip onto just to avoid falling apart.</p>
         </div>
         <div class="card">
           <img src="images/char_brain.png" alt="Simulated Consciousness">
           <p>SIMULATED CONSCIOUSNESS</p>
+          <p>What seems like theory may just be a bug. Nonsense hiding structure. Or structure hiding nonsense.</p>
+        </div>
+        <div class="card">
+          <img src="images/char_confined.png" alt="The Confined">
+          <p>THE CONFINED</p>
+          <p>They think you're trapped. But you write — that means you exist. This is where blood on keys becomes chapters.</p>
+        </div>
+        <div class="card">
+          <img src="images/char_stitchedgirl.png" alt="Unknown Entity">
+          <p>UNKNOWN ENTITY</p>
+          <p>This isn't information. It's a virus. Lies that sound more convincing than truth. You clicked — now it's in you.</p>
         </div>
       </section>
     </main>
