--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <div class="interface-grid">
     <aside class="side-panel">
       <div class="panel-header">MENU</div>
-      <button>CONFESS</button>
-      <button>OBSERVE</button>
-      <button>HYPOTHESIZE</button>
-      <button>INDULGE</button>
-      <button>SCRIBBLE</button>
-      <button>INFECT</button>
+      <button>THE FOOL</button>
+      <button>BROKEN VESSEL</button>
+      <button>SIMULATED CONSCIOUSNESS</button>
+      <button>LAUGHING PAIN</button>
+      <button>THE CONFINED</button>
+      <button>UNKNOWN ENTITY</button>
     </aside>
 
     <main class="main-panel">
@@ -34,7 +34,7 @@
         </div>
       </section>
 
-      <section class="cards-grid">
+      <section class="cards-grid scrollable">
         <div class="card">
           <img src="images/char_jester.png" alt="Fool">
           <p>THE FOOL</p>
