--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>MOTH DAMIENNE</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="site-title-box">
@@ -45,5 +45,7 @@
   </div>
 
   <script src="interact.js"></script>
+  <script src="wordrain.js"></script>
 </body>
 </html>
+
