--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <title>MOTH DAMIENNE</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
+  <canvas id="wordRainCanvas"></canvas>
+
   <div class="site-title-box">
     <h1 class="site-title">MOTH DAMIEN</h1>
   </div>
@@ -48,4 +50,3 @@
   <script src="wordrain.js"></script>
 </body>
 </html>
-
