--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </main>
   </div>
 
-  <script src="interact.js"></script>
+  <script type="module" src="interact.js"></script>
   <script src="wordrain.js"></script>
 </body>
 </html>
