--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </main>
   </div>
 
-  <script type="module" src="interact.js"></script>
+  <script type="module" src="forum.js"></script>
   <script src="wordrain.js"></script>
 </body>
 </html>
