--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Moth Demienne OS</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="main.js"></script>
-  <script defer src="forum_final.js" type="module"></script>
+  <script defer src="forum.js" type="module"></script>
   <script defer src="wordrain.js"></script>
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
@@ -13,15 +13,15 @@
 </head>
 <body>
   <div class="desktop">
-    <div class="icon" onclick="openWindow('read')"><img src="icons/icon_readnews.png"><span>Read</span></div>
-    <div class="icon" onclick="openWindow('forum')"><img src="icons/icon_forum.png"><span>Forum</span></div>
-    <div class="icon" onclick="openWindow('news')"><img src="icons/icon_news.png"><span>News</span></div>
-    <div class="icon" onclick="openWindow('profile')"><img src="icons/icon_profile.png"><span>Profile</span></div>
-    <div class="icon" onclick="openWindow('power')"><img src="icons/icon_start.png"><span>Power</span></div>
+    <div class="icon" onclick="openWindow('read')"><img src="images/icon_readnews.png"><span>Read</span></div>
+    <div class="icon" onclick="openWindow('forum')"><img src="images/icon_forum.png"><span>Forum</span></div>
+    <div class="icon" onclick="openWindow('news')"><img src="images/icon_news.png"><span>News</span></div>
+    <div class="icon" onclick="openWindow('profile')"><img src="images/icon_profile.png"><span>Profile</span></div>
+    <div class="icon" onclick="openWindow('power')"><img src="images/icon_start.png"><span>Power</span></div>
   </div>
 
   <div class="taskbar">
-    <button id="start-btn" onclick="toggleStartMenu()"><img src="icons/icon_start.png" alt="start"></button>
+    <button id="start-btn" onclick="toggleStartMenu()"><img src="images/icon_start.png" alt="start"></button>
     <div id="start-menu" class="hidden">
       <div onclick="openWindow('access')">Accession</div>
       <div onclick="openWindow('help')">Help</div>
