--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Moth Demienne OS</title>
-  <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="style.css">
   <script defer src="main.js"></script>
   <script defer src="forum.js" type="module"></script>
   <script defer src="wordrain.js"></script>
