--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <div onclick="openWindow('access')">Accession</div>
       <div onclick="openWindow('help')">Help</div>
     </div>
+      <div class="taskbar-time">6:66</div>
   </div>
 
   <div id="window-container"></div>
