--- a/forum.html
+++ b/forum.html
@@ -4,6 +4,56 @@
   <meta charset="UTF-8">
   <title>FORUM</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .thread-preview {
+      border: 1px solid #600;
+      background-color: #111;
+      padding: 10px;
+      margin-bottom: 15px;
+      color: #ccc;
+      font-family: monospace;
+    }
+    .thread-preview a {
+      color: #f55;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .thread-preview a:hover {
+      text-decoration: underline;
+    }
+    .thread-meta {
+      font-size: 12px;
+      color: #888;
+    }
+    .thread-body {
+      margin-top: 5px;
+    }
+    #thread-form {
+      margin-bottom: 20px;
+    }
+    #thread-form input, #thread-form textarea {
+      width: 100%;
+      background: #000;
+      color: #ccc;
+      border: 1px solid #333;
+      padding: 8px;
+      margin-top: 5px;
+      margin-bottom: 10px;
+      font-family: monospace;
+    }
+    #thread-form button {
+      background: #222;
+      color: #eee;
+      border: 1px solid #666;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
+    body {
+      background-color: #000;
+      color: #ccc;
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
   <div id="forum-container">
