--- a/forum.html
+++ b/forum.html
@@ -68,6 +68,6 @@
     <div id="threads"></div>
   </div>
 
-  <script src="forum.js"></script>
+  <script type="module" src="forum.js"></script>
 </body>
 </html>
