--- a/forum.html
+++ b/forum.html
@@ -1,77 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>FORUM</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    .thread-preview {
-      border: 1px solid #600;
-      background-color: #111;
-      padding: 10px;
-      margin-bottom: 15px;
-      color: #ccc;
-      font-family: monospace;
-    }
-    .thread-preview a {
-      color: #f55;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .thread-preview a:hover {
-      text-decoration: underline;
-    }
-    .thread-meta {
-      font-size: 12px;
-      color: #888;
-    }
-    .thread-body {
-      margin-top: 5px;
-    }
-    #thread-form {
-      margin-bottom: 20px;
-    }
-    #thread-form input, #thread-form textarea {
-      width: 100%;
-      background: #000;
-      color: #ccc;
-      border: 1px solid #333;
-      padding: 8px;
-      margin-top: 5px;
-      margin-bottom: 10px;
-      font-family: monospace;
-    }
-    #thread-form button {
-      background: #222;
-      color: #eee;
-      border: 1px solid #666;
-      padding: 5px 10px;
-      cursor: pointer;
-    }
-    body {
-      background-color: #000;
-      color: #ccc;
-      padding: 20px;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Форум</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="forum-container">
-    <h1>FORUM</h1>
-
-    <form id="thread-form">
-      <input type="text" id="thread-title" placeholder="Thread title" required>
-      <textarea id="thread-body" placeholder="Thread body" required></textarea>
-      <button type="submit">Post</button>
-    </form>
-
-    <div id="threads"></div>
+  <div id="nickname-container">
+    <input type="text" id="nickname-input" placeholder="Enter your nickname" />
+    <button id="save-nickname">Save</button>
   </div>
 
-  <script type="module">
-    import { mountForumUI } from './forum.js';
-    const container = document.getElementById("threads");
-    mountForumUI(container);
-  </script>
+  <div id="forum-container" style="display:none;">
+    <form id="thread-form">
+      <input type="text" id="thread-title" placeholder="Thread Title" required />
+      <textarea id="thread-body" placeholder="Thread Body" required></textarea>
+      <button type="submit" id="post-thread">Post</button>
+    </form>
+
+    <div id="thread-list"></div>
+  </div>
+
+  <script type="module" src="forum.js"></script>
 </body>
 </html>
