--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
 <body>
   <div class="desktop">
     <div class="icon" onclick="openWindow('forum')">
-      <img src="images/forum_icon.png" alt="Forum" />
+      <img src="images/icon_forum.png" alt="Forum" />
       <div>forum</div>
     </div>
-    <!-- другие иконки можно добавить сюда -->
+    <div class="icon" onclick="openWindow('accession')">
+      <img src="images/icon_asesion.png" alt="Accession" />
+      <div>accession</div>
+    </div>
+    <div class="icon" onclick="openWindow('help')">
+      <img src="images/icon_help.png" alt="Help" />
+      <div>help</div>
+    </div>
+    <div class="icon" onclick="openWindow('news')">
+      <img src="images/icon_news.png" alt="News" />
+      <div>news</div>
+    </div>
+    <div class="icon" onclick="openWindow('readnews')">
+      <img src="images/icon_readnews.png" alt="Read" />
+      <div>read</div>
+    </div>
+    <div class="icon" onclick="openWindow('profile')">
+      <img src="images/icon_profile.png" alt="Profile" />
+      <div>profile</div>
+    </div>
   </div>
 
   <div class="taskbar">
