--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
   <meta charset="UTF-8" />
   <title>MOLDEM.EXE</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.cdnfonts.com/css/pixy" rel="stylesheet" />
 </head>
 <body>
   <div class="desktop">
     <div class="icon" onclick="openWindow('forum')">
       <img src="images/icon_forum.png" alt="Forum" />
-      <div>forum</div>
+      <div>FORUM.EXE</div>
     </div>
     <div class="icon" onclick="openWindow('news')">
       <img src="images/icon_news.png" alt="News" />
-      <div>news</div>
+      <div>NEWS.EXE</div>
     </div>
     <div class="icon" onclick="openWindow('readnews')">
       <img src="images/icon_readnews.png" alt="Read" />
-      <div>read</div>
+      <div>READ.TXT</div>
     </div>
     <div class="icon" onclick="openWindow('profile')">
       <img src="images/icon_profile.png" alt="Profile" />
-      <div>profile</div>
+      <div>PROFILE.TXT</div>
     </div>
   </div>
 
@@ -30,7 +31,6 @@
       <img src="images/icon_start.png" alt="start" />
     </button>
     <div id="start-menu" class="hidden">
-      <div onclick="openWindow('read')">Read</div>
       <div onclick="openWindow('accession')">Accession</div>
       <div onclick="openWindow('help')">Help</div>
     </div>
@@ -41,5 +41,6 @@
 
   <script src="main.js"></script>
   <script src="forum.js"></script>
+  <script src="wordrain.js"></script>
 </body>
 </html>
