--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>MOLDEM.EXE</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.cdnfonts.com/css/pixy" rel="stylesheet" />
 </head>
 <body>
   <div class="desktop">
-    <div class="icon" onclick="openWindow('forum')">
+    <div class="icon" onclick="window.location.href='forum.html'">
       <img src="images/icon_forum.png" alt="Forum" />
       <div>FORUM.EXE</div>
     </div>
