--- a/thread.html
+++ b/thread.html
@@ -1,19 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Thread</title>
+  <title>THREAD.EXE</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background-color: #0f0f0f;
+      color: #c5c5c5;
+      font-family: 'Courier New', monospace;
+      padding: 20px;
+    }
+
+    .post {
+      border: 1px solid #444;
+      background-color: rgba(20, 20, 20, 0.8);
+      padding: 10px;
+      margin-bottom: 15px;
+      box-shadow: 0 0 10px #222;
+    }
+
+    .meta {
+      font-size: 0.9em;
+      color: #888;
+      margin-bottom: 5px;
+    }
+
+    .quote {
+      color: #78c36a;
+    }
+
+    .ref {
+      color: #6a9ec3;
+      cursor: pointer;
+    }
+
+    .ref:hover {
+      text-decoration: underline;
+    }
+
+    #reply-form {
+      margin-top: 40px;
+    }
+
+    #reply-form textarea {
+      width: 100%;
+      height: 100px;
+      background: #111;
+      color: #ccc;
+      border: 1px solid #444;
+      font-family: monospace;
+      padding: 10px;
+    }
+
+    #reply-form button {
+      margin-top: 10px;
+      background: #222;
+      color: #fff;
+      border: 1px solid #555;
+      padding: 5px 15px;
+      cursor: pointer;
+    }
+
+    #reply-form button:hover {
+      background: #444;
+    }
+  </style>
   <script type="module" src="thread.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 </head>
 <body>
   <div class="thread-wrapper">
     <div id="thread-content"></div>
+
     <div id="reply-form">
-      <textarea id="reply-text" placeholder="Write your reply..."></textarea>
-      <button id="reply-btn">Reply</button>
+      <textarea id="reply-text" placeholder=">нажми сюда чтобы влить безысходности..."></textarea>
+      <button id="reply-btn">Ответить</button>
     </div>
   </div>
 </body>
