--- a/forum.html
+++ b/forum.html
@@ -1,27 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Форум</title>
+  <title>FORUM.EXE</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      background-color: #0f0f0f;
+      color: #ccc;
+      font-family: 'Courier New', monospace;
+      padding: 20px;
+    }
+
+    #nickname-container {
+      margin-bottom: 30px;
+    }
+
+    #nickname-input {
+      background: #111;
+      color: #ccc;
+      border: 1px solid #444;
+      padding: 5px;
+      font-family: monospace;
+    }
+
+    #save-nickname {
+      background: #222;
+      color: #fff;
+      border: 1px solid #555;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
+
+    #thread-form input, #thread-form textarea {
+      background: #111;
+      color: #ccc;
+      border: 1px solid #444;
+      padding: 5px;
+      font-family: monospace;
+      margin-bottom: 10px;
+      display: block;
+      width: 100%;
+    }
+
+    #post-thread {
+      background: #222;
+      color: #fff;
+      border: 1px solid #555;
+      padding: 5px 15px;
+      cursor: pointer;
+    }
+
+    .thread-box {
+      border: 1px solid #444;
+      padding: 10px;
+      margin: 15px 0;
+      background-color: rgba(25, 25, 25, 0.9);
+      box-shadow: 0 0 10px #111;
+    }
+
+    .thread-box a {
+      text-decoration: none;
+      color: #8af;
+    }
+
+    .thread-box a:hover {
+      text-decoration: underline;
+    }
+
+    .thread-id {
+      color: #999;
+      font-size: 0.9em;
+    }
+
+    .thread-title {
+      font-size: 1.2em;
+      color: #ccc;
+      margin-bottom: 5px;
+    }
+
+    .thread-body {
+      color: #aaa;
+      margin-top: 5px;
+    }
+
+    small {
+      font-size: 0.8em;
+      color: #777;
+    }
+  </style>
+  <script type="module" src="forum.js"></script>
 </head>
 <body>
   <div id="nickname-container">
-    <input type="text" id="nickname-input" placeholder="Enter your nickname" />
-    <button id="save-nickname">Save</button>
+    <input type="text" id="nickname-input" placeholder="введи ник..." />
+    <button id="save-nickname">Войти</button>
   </div>
 
   <div id="forum-container" style="display:none;">
     <form id="thread-form">
-      <input type="text" id="thread-title" placeholder="Thread Title" required />
-      <textarea id="thread-body" placeholder="Thread Body" required></textarea>
-      <button type="submit" id="post-thread">Post</button>
+      <input type="text" id="thread-title" placeholder="заголовок темы" required />
+      <textarea id="thread-body" placeholder="пиши сюда свой тред..." required></textarea>
+      <button type="submit" id="post-thread">Создать тред</button>
     </form>
 
     <div id="thread-list"></div>
   </div>
-
-  <script type="module" src="forum.js"></script>
 </body>
 </html>
