--- a/index.html
+++ b/index.html
@@ -1,29 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <title>MOLDEM.EXE</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.cdnfonts.com/css/pixy" rel="stylesheet" />
+  <style>
+    .icon {
+      background-color: #111;
+      border: 4px solid #333;
+      border-radius: 24px;
+      box-shadow: inset 0 0 15px #000, 0 0 25px #220000;
+      padding: 12px 8px;
+      position: relative;
+      transition: 0.3s ease;
+    }
+
+    .icon:hover {
+      border-color: #770000;
+      box-shadow: 0 0 20px #550000, inset 0 0 15px #000;
+    }
+
+    .icon::after {
+      content: "";
+      position: absolute;
+      top: -15px;
+      right: -10px;
+      width: 20px;
+      height: 40px;
+      background: url('images/candle.png') no-repeat center/contain;
+      animation: flicker 1s infinite alternate;
+    }
+
+    @keyframes flicker {
+      from { filter: brightness(0.8); }
+      to { filter: brightness(1.2); }
+    }
+
+    .icon div {
+      margin-top: 8px;
+      color: #aa6666;
+      font-weight: bold;
+      text-shadow: 0 0 4px #220000;
+    }
+
+    body {
+      background-image: url('images/ghosts-bg.png');
+      background-size: cover;
+      background-attachment: fixed;
+    }
+  </style>
 </head>
 <body>
   <div class="desktop">
     <div class="icon" onclick="window.location.href='forum.html'">
       <img src="images/icon_forum.png" alt="Forum" />
-      <div>FORUM.EXE</div>
+      <div>ФОРУМ • архив</div>
     </div>
     <div class="icon" onclick="openWindow('news')">
       <img src="images/icon_news.png" alt="News" />
-      <div>NEWS.EXE</div>
+      <div>ХРОНИКИ • new</div>
     </div>
     <div class="icon" onclick="openWindow('readnews')">
       <img src="images/icon_readnews.png" alt="Read" />
-      <div>READ.TXT</div>
+      <div>СЛЕДЫ • txt</div>
     </div>
     <div class="icon" onclick="openWindow('profile')">
       <img src="images/icon_profile.png" alt="Profile" />
-      <div>PROFILE.TXT</div>
+      <div>ID: 0466</div>
     </div>
   </div>
 
