--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
   <link href="https://fonts.cdnfonts.com/css/pixy" rel="stylesheet" />
   <style>
     .icon {
-      background-color: #111;
-      border: 4px solid #333;
-      border-radius: 24px;
-      box-shadow: inset 0 0 15px #000, 0 0 25px #220000;
-      padding: 12px 8px;
-      position: relative;
-      transition: 0.3s ease;
+      padding: 0;
+      border: none;
+      background: none;
+      box-shadow: none;
+      border-radius: 0;
     }
 
     .icon:hover {
@@ -22,16 +20,7 @@
       box-shadow: 0 0 20px #550000, inset 0 0 15px #000;
     }
 
-    .icon::after {
-      content: "";
-      position: absolute;
-      top: -15px;
-      right: -10px;
-      width: 20px;
-      height: 40px;
-      background: url('images/candle.png') no-repeat center/contain;
-      animation: flicker 1s infinite alternate;
-    }
+    
 
     @keyframes flicker {
       from { filter: brightness(0.8); }
@@ -55,19 +44,19 @@
 <body>
   <div class="desktop">
     <div class="icon" onclick="window.location.href='forum.html'">
-      <img src="images/icon_forum.png" alt="Forum" />
+      <img src="images/icon_forum.png" alt="Forum" style="width: 160px; height: auto;" />
       <div>ФОРУМ • архив</div>
     </div>
     <div class="icon" onclick="openWindow('news')">
-      <img src="images/icon_news.png" alt="News" />
+      <img src="images/icon_news.png" alt="News" style="width: 160px; height: auto;" />
       <div>ХРОНИКИ • new</div>
     </div>
     <div class="icon" onclick="openWindow('readnews')">
-      <img src="images/icon_readnews.png" alt="Read" />
+      <img src="images/icon_readnews.png" alt="Read" style="width: 160px; height: auto;" />
       <div>СЛЕДЫ • txt</div>
     </div>
     <div class="icon" onclick="openWindow('profile')">
-      <img src="images/icon_profile.png" alt="Profile" />
+      <img src="images/icon_profile.png" alt="Profile" style="width: 160px; height: auto;" />
       <div>ID: 0466</div>
     </div>
   </div>
